# VAX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VAX.code-workspace  conanfile.txt  main.cpp  profile  winprofile
macos/VAXEngine/: conanfile.txt
macos/VAXEngine/Resources/Models/helmet/: helmet.mtl
macos/VAXEngine/Sources/: VAXEngine-Bridging-Header.h
macos/VAXEngine/Sources/App/: ContentView.swift  FileManager.swift  GectureBuilder.swift  InpurtController.swift  MetalView.swift  VAXEngineApp.swift  Viewer.swift
macos/VAXEngine/Sources/App/Settings/: SettingsModel.swift  SettingsView.swift
macos/VAXEngine/Sources/Engine/: AppEvent.h  EngineWrapper.swift  MTLEngine.h  MTLEngine.mm  Settings.hpp  TESTCPP.cpp  TESTCPP.hpp  mtl_implementation.cpp
macos/VAXEngine/Sources/Engine/Objects/: Color.hpp  LightBuilder.hpp  Model.cpp  Model.hpp
macos/VAXEngine/Sources/Engine/Objects/Camera/: Camera.cpp  Camera.hpp  ShadowCamera.cpp  ShadowCamera.hpp
macos/VAXEngine/Sources/Engine/Objects/Loaders/: ModelLoader.cpp  ModelLoader.hpp  TexturesLoader.cpp  TexturesLoader.hpp
macos/VAXEngine/Sources/Engine/Objects/Mesh/: Mesh.cpp  Mesh.hpp  MeshBuffer.cpp  MeshBuffer.hpp  Submesh.cpp  Submesh.hpp  VertexDescriptor.cpp  VertexDescriptor.hpp
macos/VAXEngine/Sources/Engine/Objects/Model/: Model.cpp  Model.hpp  (+2 more)
macos/VAXEngine/Sources/Engine/Renderer/: MTLRenderer.cpp  MTLRenderer.hpp  MTLStack.cpp  MTLStack.hpp  RenderPipelineStateFactory.hpp
macos/VAXEngine/Sources/Engine/Scene/: Scene.cpp  Scene.hpp
macos/VAXEngine/Sources/Engine/Shaders/: Basic.metal  BasicShaders.metal  Debug.metal  DebugShaders.metal  Deferred.metal  Lighting.h  Lighting.metal  PBR.metal  ShaderTypes.h  ShaderUtils.h  Shadow.metal
macos/VAXEngine/Sources/Engine/Utils/: CommonUtils.h  DragGestureValue.cpp  DragGestureValue.h  Texture.cpp  Texture.hpp  simd_utils.h
macos/VAXEngine/VAXEngine/: ContentView.swift  VAXEngineApp.swift
macos/VAXEngine/VAXEngine.xcodeproj/: project.pbxproj
macos/VAXEngine_/VAXEngine/: AppDelegate.swift  GameViewController.swift  Renderer.swift  ShaderTypes.h  Shaders.metal
macos/VAXEngine_/VAXEngine.xcodeproj/: project.pbxproj
macos/VAXEngine_/VAXEngine/Base.lproj/: Main.storyboard
resources/assets/models/: gizmo.glb
src/: luna.h
src/app/: App.cpp  App.hpp  app.cpp  app.h
src/apps/: App.cpp  App.hpp  SimpleApp.cpp  SimpleApp.hpp
src/core/logger/: Logger.hpp  logger.h
src/core/ui/: uiLayer.cpp  uiLayer.h
src/engine/math/: Transfrom.cpp  VAXMath.hpp  VAXMathObjects.hpp  mathUtils.h  size.h  transform.h  transfrom.cpp  vaxMath.h
src/engine/objects/Models/: DrawableModel.cpp  DrawableModel.hpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  drawableModel.cpp  drawableModel.h  material.h  model.h  modelLoader.cpp  modelLoader.h  submesh.cpp  submesh.h
src/engine/objects/Primitives/: Primitives2D.hpp  primitives2d.h  primitivesBuilder.cpp  primitivesBuilder.h
src/engine/objects/camera/: Camera.hpp  camera.cpp  camera.h
src/engine/objects/mesh/: Mesh.cpp  Mesh.hpp  Vertex.h  mesh.cpp  mesh.h
src/engine/renderer/: Renderer.cpp  Renderer.hpp  renderer.cpp  renderer.h
src/engine/scene/: Scene.cpp  Scene.hpp  drawableScene.h  scene.cpp  scene.h
src/engine/shaders/: ShaderUniforms.h  VertexUniforms.h  background.comp  background.comp.slang  base.frag.slang  base.slang  base.vert.slang  shader.frag  shader.vert  shaderUniforms.h
src/engine/textures/: ImageUtils.cpp  ImageUtils.hpp  Sampler.cpp  Sampler.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  imageUtils.h  sampler.cpp  sampler.h  texture.cpp  texture.h  textureBuilder.cpp  textureBuilder.h  textureLoader.cpp
src/engine/vk/buffer/: Buffer.cpp  Buffer.hpp  buffer.cpp  buffer.h  bufferData.h
src/engine/vk/engine/: DescriptorSetManager.cpp  DescriptorSetManager.hpp  Device.cpp  Device.hpp  PipelineManager.cpp  PipelineManager.hpp  RenderPassManager.cpp  RenderPassManager.hpp  RenderingDestination.cpp  RenderingDestination.hpp  SwapchainManager.cpp  SwapchainManager.hpp  VKEngine.cpp  VKEngine.hpp  VKObject.hpp  VKObjectBuilder.hpp
src/engine/vk/engine/builders/: pipelineBuilder.cpp  pipelineBuilder.h  renderDestinationBuilder.cpp  renderDestinationBuilder.h  renderPassBuilder.cpp  renderPassBuilder.h  shaderModuleBuilder.h  vkInstanceBuilder.h
src/engine/vk/engine/hardware/: device.cpp  device.h  window.cpp  window.h
src/engine/vk/engine/managers/: commandManager.cpp  commandManager.h  descriptorSetManager.cpp  descriptorSetManager.h  queueManager.cpp  queueManager.h  swapchainManager.cpp  swapchainManager.h  syncObjectsManager.cpp  syncObjectsManager.h
src/engine/vk/engine/objects/: pipeline.h  renderDestination.cpp  renderDestination.h  renderPass.h  swapchain.cpp  swapchain.h  vkObject.h  vkObjectBuilder.h
src/engine/vk/engine/pipeline/: pipeline.h  pipelineManager.cpp  pipelineManager.h  renderPipeline.h
src/engine/vk/engine/vkEngine/: VKEngine.cpp  VKEngine.hpp  vkEngine.cpp  vkEngine.h
src/engine/vk/resources/: resourceHandle.h  resourceManager.cpp  resourceManager.h  resourceUtils.h
src/engine/vk/resources/buffer/: buffer.cpp  buffer.h  bufferData.h  bufferHandle.h  bufferManager.cpp  bufferManager.h  bufferUtils.h
src/engine/vk/resources/mesh/: mesh.cpp  mesh.h  meshManager.cpp  meshManager.h  vertex.h
src/engine/vk/resources/textures/: imageUtils.h  texture.cpp  texture.h  textureBuilder.cpp  textureLoader.cpp
src/engine/vk/stack/: DescriptorSetManager.cpp  DescriptorSetManager.hpp  Device.cpp  Device.hpp  PipelineManager.cpp  PipelineManager.hpp  VKEngine.cpp  VKEngine.hpp  VKObject.hpp  VKObjectBuilder.hpp  VKStack.cpp  VKStack.hpp
src/engine/vk/utils/: DeletionQueue.hpp  VKUtils.cpp  VKUtils.hpp  deletionQueue.h  vkUtils.cpp  vkUtils.h  vk_debug.h
src/population/: generation.hpp  population.hpp  population_utils.h  specimen.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/shaders/: shader.vert
src/vk/buffer/: Buffer.cpp  Buffer.hpp
src/vk/stack/: VKStack.cpp  VKStack.hpp
src/vk/utils/: VKUtils.cpp  VKUtils.hpp
(+56 files in other folders)
